fix: исправил логику работы метода getItemDtosToRequestList